exports[`prefer-strict-assert > invalid(1): import assert from 'node:assert';\nassert.equal(a, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.equal(a, b);

`;

exports[`prefer-strict-assert > invalid(1): import assert from 'node:assert';\nassert.equal(a, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.equal(a, b);
    | ^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(a, b);

`;

exports[`prefer-strict-assert > invalid(10): import test from 'node:test';\ntest('t', t => { t.assert.deepEqual(a, b); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.deepEqual(a, b); });

`;

exports[`prefer-strict-assert > invalid(10): import test from 'node:test';\ntest('t', t => { t.assert.deepEqual(a, b); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', t => { t.assert.deepEqual(a, b); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`deepStrictEqual\` over the legacy loose \`deepEqual\`.

Output:
  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.deepStrictEqual(a, b); });

`;

exports[`prefer-strict-assert > invalid(11): import assert from 'node:assert';\nimport strict from 'node:assert/strict';\nassert.equal(a, b);\nstrict.equal(c, d); 1`] = `

  1 | import assert from 'node:assert';
  2 | import strict from 'node:assert/strict';
  3 | assert.equal(a, b);
  4 | strict.equal(c, d);

`;

exports[`prefer-strict-assert > invalid(11): import assert from 'node:assert';\nimport strict from 'node:assert/strict';\nassert.equal(a, b);\nstrict.equal(c, d); 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | import strict from 'node:assert/strict';
> 3 | assert.equal(a, b);
    | ^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.
  4 | strict.equal(c, d);

Output:
  1 | import assert from 'node:assert';
  2 | import strict from 'node:assert/strict';
  3 | assert.strictEqual(a, b);
  4 | strict.equal(c, d);

`;

exports[`prefer-strict-assert > invalid(12): import assert from 'node:assert';\nassert.equal(a as string, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.equal(a as string, b);

`;

exports[`prefer-strict-assert > invalid(12): import assert from 'node:assert';\nassert.equal(a as string, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.equal(a as string, b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(a as string, b);

`;

exports[`prefer-strict-assert > invalid(13): // A cast around a bare named import erases to it, so the fix would name an unimported method\nimport {equal} from 'node:assert';\n(equal as any)(a, b); 1`] = `

  1 | // A cast around a bare named import erases to it, so the fix would name an unimported method
  2 | import {equal} from 'node:assert';
  3 | (equal as any)(a, b);

`;

exports[`prefer-strict-assert > invalid(13): // A cast around a bare named import erases to it, so the fix would name an unimported method\nimport {equal} from 'node:assert';\n(equal as any)(a, b); 2`] = `

Message:
  1 | // A cast around a bare named import erases to it, so the fix would name an unimported method
  2 | import {equal} from 'node:assert';
> 3 | (equal as any)(a, b);
    | ^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.

`;

exports[`prefer-strict-assert > invalid(14): import {equal} from 'node:assert';\n(equal!)(a, b); 1`] = `

  1 | import {equal} from 'node:assert';
  2 | (equal!)(a, b);

`;

exports[`prefer-strict-assert > invalid(14): import {equal} from 'node:assert';\n(equal!)(a, b); 2`] = `

Message:
  1 | import {equal} from 'node:assert';
> 2 | (equal!)(a, b);
    | ^^^^^^^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.

`;

exports[`prefer-strict-assert > invalid(15): // \`Object.is\` and \`==\` disagree on \`±0\`, so the rewrite would turn a passing assertion into a failing one\nimport assert from 'node:assert';\nassert.equal(0, -0); 1`] = `

  1 | // \`Object.is\` and \`==\` disagree on \`±0\`, so the rewrite would turn a passing assertion into a failing one
  2 | import assert from 'node:assert';
  3 | assert.equal(0, -0);

`;

exports[`prefer-strict-assert > invalid(15): // \`Object.is\` and \`==\` disagree on \`±0\`, so the rewrite would turn a passing assertion into a failing one\nimport assert from 'node:assert';\nassert.equal(0, -0); 2`] = `

Message:
  1 | // \`Object.is\` and \`==\` disagree on \`±0\`, so the rewrite would turn a passing assertion into a failing one
  2 | import assert from 'node:assert';
> 3 | assert.equal(0, -0);
    | ^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.

`;

exports[`prefer-strict-assert > invalid(16): import assert from 'node:assert';\nassert.notEqual(0, -0); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.notEqual(0, -0);

`;

exports[`prefer-strict-assert > invalid(16): import assert from 'node:assert';\nassert.notEqual(0, -0); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.notEqual(0, -0);
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`notStrictEqual\` over the legacy loose \`notEqual\`.

`;

exports[`prefer-strict-assert > invalid(17): import assert from 'node:assert';\nassert.deepEqual(0, -0); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(0, -0);

`;

exports[`prefer-strict-assert > invalid(17): import assert from 'node:assert';\nassert.deepEqual(0, -0); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(0, -0);
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`deepStrictEqual\` over the legacy loose \`deepEqual\`.

`;

exports[`prefer-strict-assert > invalid(18): // The loose comparison coerces between types, which \`Object.is\` does not\nimport assert from 'node:assert';\nassert.equal('1', 1); 1`] = `

  1 | // The loose comparison coerces between types, which \`Object.is\` does not
  2 | import assert from 'node:assert';
  3 | assert.equal('1', 1);

`;

exports[`prefer-strict-assert > invalid(18): // The loose comparison coerces between types, which \`Object.is\` does not\nimport assert from 'node:assert';\nassert.equal('1', 1); 2`] = `

Message:
  1 | // The loose comparison coerces between types, which \`Object.is\` does not
  2 | import assert from 'node:assert';
> 3 | assert.equal('1', 1);
    | ^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.

`;

exports[`prefer-strict-assert > invalid(19): import assert from 'node:assert';\nassert.equal(null, undefined); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.equal(null, undefined);

`;

exports[`prefer-strict-assert > invalid(19): import assert from 'node:assert';\nassert.equal(null, undefined); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.equal(null, undefined);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.

`;

exports[`prefer-strict-assert > invalid(2): import assert from 'node:assert';\nassert.notEqual(a, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.notEqual(a, b);

`;

exports[`prefer-strict-assert > invalid(2): import assert from 'node:assert';\nassert.notEqual(a, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.notEqual(a, b);
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`notStrictEqual\` over the legacy loose \`notEqual\`.

Output:
  1 | import assert from 'node:assert';
  2 | assert.notStrictEqual(a, b);

`;

exports[`prefer-strict-assert > invalid(20): // \`NaN\` is the one pair the loose methods and \`Object.is\` agree on, so the fix is safe\nimport assert from 'node:assert';\nassert.equal(NaN, NaN); 1`] = `

  1 | // \`NaN\` is the one pair the loose methods and \`Object.is\` agree on, so the fix is safe
  2 | import assert from 'node:assert';
  3 | assert.equal(NaN, NaN);

`;

exports[`prefer-strict-assert > invalid(20): // \`NaN\` is the one pair the loose methods and \`Object.is\` agree on, so the fix is safe\nimport assert from 'node:assert';\nassert.equal(NaN, NaN); 2`] = `

Message:
  1 | // \`NaN\` is the one pair the loose methods and \`Object.is\` agree on, so the fix is safe
  2 | import assert from 'node:assert';
> 3 | assert.equal(NaN, NaN);
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.

Output:
  1 | // \`NaN\` is the one pair the loose methods and \`Object.is\` agree on, so the fix is safe
  2 | import assert from 'node:assert';
  3 | assert.strictEqual(NaN, NaN);

`;

exports[`prefer-strict-assert > invalid(21): // A pair the rule cannot resolve is left to the runtime, which is where the difference shows up\nimport assert from 'node:assert';\nassert.equal(actual, expected); 1`] = `

  1 | // A pair the rule cannot resolve is left to the runtime, which is where the difference shows up
  2 | import assert from 'node:assert';
  3 | assert.equal(actual, expected);

`;

exports[`prefer-strict-assert > invalid(21): // A pair the rule cannot resolve is left to the runtime, which is where the difference shows up\nimport assert from 'node:assert';\nassert.equal(actual, expected); 2`] = `

Message:
  1 | // A pair the rule cannot resolve is left to the runtime, which is where the difference shows up
  2 | import assert from 'node:assert';
> 3 | assert.equal(actual, expected);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.

Output:
  1 | // A pair the rule cannot resolve is left to the runtime, which is where the difference shows up
  2 | import assert from 'node:assert';
  3 | assert.strictEqual(actual, expected);

`;

exports[`prefer-strict-assert > invalid(22): // \`==\` coerces an object to a primitive, which \`Object.is\` does not, so a resolved object on either side is not fixed\nimport assert from 'node:assert';\nassert.equal([1], 1); 1`] = `

  1 | // \`==\` coerces an object to a primitive, which \`Object.is\` does not, so a resolved object on either side is not fixed
  2 | import assert from 'node:assert';
  3 | assert.equal([1], 1);

`;

exports[`prefer-strict-assert > invalid(22): // \`==\` coerces an object to a primitive, which \`Object.is\` does not, so a resolved object on either side is not fixed\nimport assert from 'node:assert';\nassert.equal([1], 1); 2`] = `

Message:
  1 | // \`==\` coerces an object to a primitive, which \`Object.is\` does not, so a resolved object on either side is not fixed
  2 | import assert from 'node:assert';
> 3 | assert.equal([1], 1);
    | ^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.

`;

exports[`prefer-strict-assert > invalid(23): import assert from 'node:assert';\nassert.notEqual([1], 1); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.notEqual([1], 1);

`;

exports[`prefer-strict-assert > invalid(23): import assert from 'node:assert';\nassert.notEqual([1], 1); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.notEqual([1], 1);
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`notStrictEqual\` over the legacy loose \`notEqual\`.

`;

exports[`prefer-strict-assert > invalid(24): import assert from 'node:assert';\nassert.equal([], ''); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.equal([], '');

`;

exports[`prefer-strict-assert > invalid(24): import assert from 'node:assert';\nassert.equal([], ''); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.equal([], '');
    | ^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.

`;

exports[`prefer-strict-assert > invalid(25): // Loose deep equality coerces nested values, which the strict one does not\nimport assert from 'node:assert';\nassert.deepEqual([1], ['1']); 1`] = `

  1 | // Loose deep equality coerces nested values, which the strict one does not
  2 | import assert from 'node:assert';
  3 | assert.deepEqual([1], ['1']);

`;

exports[`prefer-strict-assert > invalid(25): // Loose deep equality coerces nested values, which the strict one does not\nimport assert from 'node:assert';\nassert.deepEqual([1], ['1']); 2`] = `

Message:
  1 | // Loose deep equality coerces nested values, which the strict one does not
  2 | import assert from 'node:assert';
> 3 | assert.deepEqual([1], ['1']);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`deepStrictEqual\` over the legacy loose \`deepEqual\`.

`;

exports[`prefer-strict-assert > invalid(26): import assert from 'node:assert';\nassert.notDeepEqual({a: 1}, {a: '1'}); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.notDeepEqual({a: 1}, {a: '1'});

`;

exports[`prefer-strict-assert > invalid(26): import assert from 'node:assert';\nassert.notDeepEqual({a: 1}, {a: '1'}); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.notDeepEqual({a: 1}, {a: '1'});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`notDeepStrictEqual\` over the legacy loose \`notDeepEqual\`.

`;

exports[`prefer-strict-assert > invalid(27): // An object on one side only is still fixed while the other side is left to the runtime\nimport assert from 'node:assert';\nassert.deepEqual(actual, {a: 1}); 1`] = `

  1 | // An object on one side only is still fixed while the other side is left to the runtime
  2 | import assert from 'node:assert';
  3 | assert.deepEqual(actual, {a: 1});

`;

exports[`prefer-strict-assert > invalid(27): // An object on one side only is still fixed while the other side is left to the runtime\nimport assert from 'node:assert';\nassert.deepEqual(actual, {a: 1}); 2`] = `

Message:
  1 | // An object on one side only is still fixed while the other side is left to the runtime
  2 | import assert from 'node:assert';
> 3 | assert.deepEqual(actual, {a: 1});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`deepStrictEqual\` over the legacy loose \`deepEqual\`.

Output:
  1 | // An object on one side only is still fixed while the other side is left to the runtime
  2 | import assert from 'node:assert';
  3 | assert.deepStrictEqual(actual, {a: 1});

`;

exports[`prefer-strict-assert > invalid(3): import assert from 'node:assert';\nassert.deepEqual(a, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(a, b);

`;

exports[`prefer-strict-assert > invalid(3): import assert from 'node:assert';\nassert.deepEqual(a, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(a, b);
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`deepStrictEqual\` over the legacy loose \`deepEqual\`.

Output:
  1 | import assert from 'node:assert';
  2 | assert.deepStrictEqual(a, b);

`;

exports[`prefer-strict-assert > invalid(4): import assert from 'node:assert';\nassert.notDeepEqual(a, b); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.notDeepEqual(a, b);

`;

exports[`prefer-strict-assert > invalid(4): import assert from 'node:assert';\nassert.notDeepEqual(a, b); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.notDeepEqual(a, b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`notDeepStrictEqual\` over the legacy loose \`notDeepEqual\`.

Output:
  1 | import assert from 'node:assert';
  2 | assert.notDeepStrictEqual(a, b);

`;

exports[`prefer-strict-assert > invalid(5): import assert from 'node:assert';\nassert.equal(a, b, \"message\"); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.equal(a, b, "message");

`;

exports[`prefer-strict-assert > invalid(5): import assert from 'node:assert';\nassert.equal(a, b, \"message\"); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.equal(a, b, "message");
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.

Output:
  1 | import assert from 'node:assert';
  2 | assert.strictEqual(a, b, "message");

`;

exports[`prefer-strict-assert > invalid(6): import {equal} from 'node:assert';\nequal(a, b); 1`] = `

  1 | import {equal} from 'node:assert';
  2 | equal(a, b);

`;

exports[`prefer-strict-assert > invalid(6): import {equal} from 'node:assert';\nequal(a, b); 2`] = `

Message:
  1 | import {equal} from 'node:assert';
> 2 | equal(a, b);
    | ^^^^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.

`;

exports[`prefer-strict-assert > invalid(7): import {deepEqual} from 'node:assert';\ndeepEqual(a, b); 1`] = `

  1 | import {deepEqual} from 'node:assert';
  2 | deepEqual(a, b);

`;

exports[`prefer-strict-assert > invalid(7): import {deepEqual} from 'node:assert';\ndeepEqual(a, b); 2`] = `

Message:
  1 | import {deepEqual} from 'node:assert';
> 2 | deepEqual(a, b);
    | ^^^^^^^^^^^^^^^ Prefer \`deepStrictEqual\` over the legacy loose \`deepEqual\`.

`;

exports[`prefer-strict-assert > invalid(8): import {equal as eq} from 'node:assert';\neq(a, b); 1`] = `

  1 | import {equal as eq} from 'node:assert';
  2 | eq(a, b);

`;

exports[`prefer-strict-assert > invalid(8): import {equal as eq} from 'node:assert';\neq(a, b); 2`] = `

Message:
  1 | import {equal as eq} from 'node:assert';
> 2 | eq(a, b);
    | ^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.

`;

exports[`prefer-strict-assert > invalid(9): import test from 'node:test';\ntest('t', t => { t.assert.equal(a, b); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.equal(a, b); });

`;

exports[`prefer-strict-assert > invalid(9): import test from 'node:test';\ntest('t', t => { t.assert.equal(a, b); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', t => { t.assert.equal(a, b); });
    |                  ^^^^^^^^^^^^^^^^^^^^ Prefer \`strictEqual\` over the legacy loose \`equal\`.

Output:
  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.strictEqual(a, b); });

`;
